// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox defaultChecked 1`] = `
<span
  class="mcore-checkbox mcore-checkbox--checked"
>
  <span
    class="mcore-checkbox__widget"
  >
    <span
      class="mcore-checkbox__inner"
    />
  </span>
  <span
    class="mcore-checkbox__text"
  >
    foo
  </span>
  <input
    checked=""
    class="mcore-checkbox__input"
    type="checkbox"
  />
</span>
`;

exports[`Checkbox disabled 1`] = `
<span
  class="mcore-checkbox mcore-checkbox--disabled"
>
  <span
    class="mcore-checkbox__widget"
  >
    <span
      class="mcore-checkbox__inner"
    />
  </span>
  <span
    class="mcore-checkbox__text"
  >
    foo
  </span>
  <input
    class="mcore-checkbox__input"
    disabled=""
    type="checkbox"
  />
</span>
`;

exports[`Checkbox renders correctly 1`] = `
<span
  class="mcore-checkbox mcore-checkbox--checked"
>
  <span
    class="mcore-checkbox__widget"
  >
    <span
      class="mcore-checkbox__inner"
    />
  </span>
  <span
    class="mcore-checkbox__text"
  >
    foo
  </span>
  <input
    checked=""
    class="mcore-checkbox__input"
    type="checkbox"
  />
</span>
`;

exports[`Checkbox.Group render defaultValue correctly 1`] = `
<div
  class="mcore-checkbox-group mcore-checkbox-group--xs mcore-checkbox-group--radius"
>
  <div
    class="mcore-checkbox-group__inner"
  >
    <span
      class="mcore-checkbox"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项一
      </span>
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="0"
      />
    </span>
    <span
      class="mcore-checkbox mcore-checkbox--checked"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="mcore-checkbox__input"
        type="checkbox"
        value="1"
      />
    </span>
    <span
      class="mcore-checkbox"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项三
      </span>
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group render value correctly 1`] = `
<div
  class="mcore-checkbox-group mcore-checkbox-group--xs mcore-checkbox-group--radius"
>
  <div
    class="mcore-checkbox-group__inner"
  >
    <span
      class="mcore-checkbox mcore-checkbox--checked"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项一
      </span>
      <input
        checked=""
        class="mcore-checkbox__input"
        type="checkbox"
        value="0"
      />
    </span>
    <span
      class="mcore-checkbox"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项二
      </span>
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="1"
      />
    </span>
    <span
      class="mcore-checkbox"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项三
      </span>
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group renders correctly 1`] = `
<div
  class="mcore-checkbox-group mcore-checkbox-group--xs mcore-checkbox-group--radius"
>
  <div
    class="mcore-checkbox-group__inner"
  >
    <span
      class="mcore-checkbox"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项一
      </span>
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="0"
      />
    </span>
    <span
      class="mcore-checkbox mcore-checkbox--checked"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="mcore-checkbox__input"
        type="checkbox"
        value="1"
      />
    </span>
    <span
      class="mcore-checkbox"
    >
      <span
        class="mcore-checkbox__widget"
      >
        <span
          class="mcore-checkbox__inner"
        />
      </span>
      <span
        class="mcore-checkbox__text"
      >
        选项三
      </span>
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group type is button 1`] = `
<div
  class="mcore-checkbox-group mcore-checkbox-group--button mcore-checkbox-group--xs mcore-checkbox-group--radius"
>
  <div
    class="mcore-checkbox-group__inner"
  >
    <button
      class="mcore-checkbox"
      type="button"
    >
      选项一
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="0"
      />
    </button>
    <button
      class="mcore-checkbox"
      type="button"
    >
      选项二
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="1"
      />
    </button>
    <button
      class="mcore-checkbox"
      type="button"
    >
      选项三
      <input
        class="mcore-checkbox__input"
        type="checkbox"
        value="2"
      />
    </button>
  </div>
</div>
`;

exports[`Checkbox.Group type is cell 1`] = `
<div
  class="mcore-checkbox-group mcore-checkbox-group--cell mcore-checkbox-group--xs mcore-checkbox-group--radius"
>
  <div
    class="mcore-checkbox-group__inner"
  >
    <div
      class="mcore-cell mcore-cell--link"
    >
      <div
        class="mcore-cell__inner"
      >
        <div
          class="mcore-cell__header"
        />
        <div
          class="mcore-cell__body"
        >
          <div
            class="mcore-cell__content"
          >
            <span
              class="mcore-checkbox"
            >
              <span
                class="mcore-checkbox__widget"
              >
                <span
                  class="mcore-checkbox__inner"
                />
              </span>
              <span
                class="mcore-checkbox__text"
              >
                选项一
              </span>
              <input
                class="mcore-checkbox__input"
                type="checkbox"
                value="0"
              />
            </span>
          </div>
        </div>
        <div
          class="mcore-cell__footer"
        />
      </div>
    </div>
    <div
      class="mcore-cell mcore-cell--link"
    >
      <div
        class="mcore-cell__inner"
      >
        <div
          class="mcore-cell__header"
        />
        <div
          class="mcore-cell__body"
        >
          <div
            class="mcore-cell__content"
          >
            <span
              class="mcore-checkbox"
            >
              <span
                class="mcore-checkbox__widget"
              >
                <span
                  class="mcore-checkbox__inner"
                />
              </span>
              <span
                class="mcore-checkbox__text"
              >
                选项二
              </span>
              <input
                class="mcore-checkbox__input"
                type="checkbox"
                value="1"
              />
            </span>
          </div>
        </div>
        <div
          class="mcore-cell__footer"
        />
      </div>
    </div>
    <div
      class="mcore-cell mcore-cell--link"
    >
      <div
        class="mcore-cell__inner"
      >
        <div
          class="mcore-cell__header"
        />
        <div
          class="mcore-cell__body"
        >
          <div
            class="mcore-cell__content"
          >
            <span
              class="mcore-checkbox"
            >
              <span
                class="mcore-checkbox__widget"
              >
                <span
                  class="mcore-checkbox__inner"
                />
              </span>
              <span
                class="mcore-checkbox__text"
              >
                选项三
              </span>
              <input
                class="mcore-checkbox__input"
                type="checkbox"
                value="2"
              />
            </span>
          </div>
        </div>
        <div
          class="mcore-cell__footer"
        />
      </div>
    </div>
  </div>
</div>
`;
